[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for FM-DB (Free Movie Database) API - Search movies, get posters and trailers from IMDb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.17.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fm_db_server"]

